# EnumerationFinder

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  finder.cpp
test/: EnumerationFinder.dump  test.c
